--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<div class="visual-baseline-container">
+
+</div>
+<div class="decription-container">
+
+</div>
+<div class="plateform-container">
+
+</div>
+<div class="streaming-episodes-container">
+
+</div>
