ajout des textes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,17 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-
+<%# <h1>pages#home</h1>
+<p>find me in app/views/pages/home.html.erb</p> %>
 <div class="visual-baseline-container">
-
+  <h1>Le podcast qui explore le travail de demain</h1>
+  <h2>by Hélène & Laëtitia</h2>
 </div>
 <div class="decription-container">
-
+  <p>Pourquoi est-ce que l’on travaille ? Comment trouver une ou des activités qui font sens pour soi et pour la planète ? 
+  Et si chacun.e pouvait réinventer sa façon de travailler ?</p>
+  <br>
+  <p>Nous explorons avec nos invité.es des alternatives pour travailler autrement : 
+  néo-artisans, slasheurs, indépendants, makers, job-crafteurs, inventeurs, etc. 
+  Nous partons à la rencontre de celles et ceux qui libèrent le travail et définissent 
+  de nouvelles formes de collaboration nécessaires à la transition vers un monde plus écologique, plus solidaire et plus inclusif.</p>
 </div>
 <div class="plateform-container">
 
