--- a/app/views/pages/a-propos.html.erb
+++ b/app/views/pages/a-propos.html.erb
@@ -13,3 +13,13 @@
     <p>Laëtitia</p>
   </div>
 </div>
+<div class="origins-container">
+  <h1>Les origines</h1>
+  <p>Même Pas Peur, c’est d’abord un collectif informel né en 2017 qui se donne pour mission d’inspirer et d’outiller les personnes en quête de sens, 
+  à la recherche d’un équilibre vie pro / vie perso, et notamment l’adéquation entre ses valeurs et son activité professionnelle. 
+  De nombreux évènements et ateliers ont été organisés via Meetup, avec une communauté réunissant plus de 2 000 personnes !</p>
+  <br>
+  <p>L’équipe du collectif s’est depuis agrandie et s’est structuré en  association fin 2019.  Plus on est de fous, plus on rit, et plus on est créatifs aussi ! 
+  Même Pas Peur propose un espace d’espace, mais est aussi un laboratoire d’expérimentation pour qui veut tester des initiatives et des projets 
+  : évènements en ligne, ateliers de créativité, d’écriture digitale, réflexion sur un nouveau média, etc.</p>
+</div>
