footer sans Newsletter

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,15 +1,18 @@
 <footer class="fixed-bottom font-family">
-  <hr>
-  
+
+<hr>
+
+<div class="footer-container">
   <div class="copyright form-inline">
-    <p>© 2021 Copyright: <span class="color-link">Néotravail</span></p>
+    <p>© 2021 Copyright Néotravail</p>
   </div>
 
-  <div>
-    <p>Mentions Légales</p>
+  <div class="mentions-legales form-inline">
+    <p><a href="">Mentions Légales</a></p>
   </div>
 
   <div class="social-media form-inline">
-    <p class="color-link"><i class="fab fa-linkedin"></i></p>
+    <p class="color-link"><a href=""><i class="fab fa-linkedin fa-2x"></i></a></p>
   </div>
+</div>
 </footer>
