--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,4 +1,9 @@
 // Define variables for your color scheme
+// Quatres couleurs de Néotravail 
+$neogreen: #249396;
+$neorange: #F79B73;
+$neopink: #F7CFBC;
+$neoyellow: #F9F7D0;
 
 // For example:
 $red: #FD1015;
