finish the basic design for the home page

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -24,3 +24,22 @@ hr {
 .logo-platform {
   width: 50px;
 }
+
+.streaming-episodes-container {
+  margin-top: 2%;
+  background-color: #FAF7CE;
+  padding: 5%;
+}
+
+.card-podcast {
+  margin: 0 auto;
+  width: 60%;
+  height: 120px;
+  background-color: #249396;
+}
+
+.newsletter-container {
+  h1 {
+    color: #249396;
+  }
+}
