--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,18 +1,15 @@
-<footer class="fixed-bottom font-family">
-
 <hr>
 
 <div class="footer-container">
-  <div class="copyright form-inline">
+  <div class="copyright">
     <p>© 2021 Copyright Néotravail</p>
   </div>
 
-  <div class="mentions-legales form-inline">
+  <div class="mentions-legales">
     <p><a href="">Mentions Légales</a></p>
   </div>
 
-  <div class="social-media form-inline">
+  <div class="social-media">
     <p class="color-link"><a href=""><i class="fab fa-linkedin fa-2x"></i></a></p>
   </div>
 </div>
-</footer>
