--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,6 +3,13 @@
   flex-direction: row;
   justify-content: space-between;
   font-size: 16px;
-  height: 8vh;
   padding: 0 15em;
+}
+
+.mentions-legales {
+  padding-right: 4em;
+}
+
+.social-media {
+  padding-right: 7em;
 }
