--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,10 +6,10 @@
   </div>
 
   <div class="mentions-legales">
-    <p><a href="">Mentions Légales</a></p>
+    <p><a href="" style="color:black">Mentions Légales</a></p>
   </div>
 
   <div class="social-media">
-    <p class="color-link"><a href=""><i class="fab fa-linkedin fa-2x"></i></a></p>
+    <p class="color-link"><a href=""><i class="fab fa-linkedin fa-2x" style="color:black"></i></a></p>
   </div>
 </div>
