--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -5,5 +5,21 @@
   <p>Ecris-nous à contact@neotravail.fr ou remplis le formulaire ci-dessous :)</p>
 </div>
 <div class="contact-form-container">
-
+  <%= form_for(@contact_form) do |f| %>
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </div>
+  <div class="field">
+    <%= f.label :email %><br />
+    <%= f.text_field :email %>
+  </div>
+  <div class="field">
+    <%= f.label :message %><br />
+    <%= f.text_area :message %>
+  </div>
+  <div class="actions">
+    <%= f.submit "Send"%>
+  </div>
+<% end %>
 </div>
