--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -30,4 +30,22 @@
     <img src="https://via.placeholder.com/250" alt="photo-3">
     <img src="https://via.placeholder.com/250" alt="photo-4">
   </div>
+  <div class="about-podcast-container mt-5">
+    <h1 class="text-center mb-4">Le Podcast</h1>
+    <p>Lors des événements organisés par Même Pas Peur sur Lyon, nous avons rencontré ces trois dernières années des dizaines de personnes qui cassent les codes et réinventent leur métier.
+    </p>
+
+    <p>Il était crucial pour nous de les mettre en lumière et de partager au plus grand nombre la bonne nouvelle : il est possible d'avoir une activité qui fait sens pour soi et pour la planète ! Ces métiers de demain existent aujourd'hui. De nouvelles façons de travailler et de collaborer se mettent en place. Il suffit parfois de rêver un peu, de se faire confiance et de la jouer collectif pour faire bouger les choses. Nous avons la possibilité de redessiner notre futur au travail, de modeler nos jobs selon nos envies et nos valeurs, d'avoir 7 emplois dans notre vie ou 7 activités en même temps. Alors qu’est-ce qu’on attend pour prendre les commandes ?
+    </p>
+
+    <p class="m-auto text-center my-4 font-weight-bold w-50">Nous vivons un changement de paradigme.
+    Notre rapport au travail évolue.
+    Il est temps de construire la société que nous voulons.
+    </p>
+
+    <p class="mt-4">C’est pourquoi nous avons souhaité, à travers ce podcast, aller à la rencontre de celles et ceux qui libèrent le travail, définissent de nouvelles formes de collaboration et créent ensemble l'avenir d'un monde plus écologique, solidaire et inclusif.
+    </p>
+
+    <p class="mt-4">Bonne écoute !</p>
+  </div>
 </div>
