insert the newletter && finish primary design

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -48,4 +48,20 @@
 
     <p class="mt-4">Bonne écoute !</p>
   </div>
+
+  <hr class="my-5">
+
+  <div class="newsletter-container text-center">
+    <h1>Newsletter</h1>
+    <p>Pour découvrir de nouveaux métier ou en savoir plus sur le futur du travail,<br> inscrit toi à la newsletter !</p>
+    <input type="text" class="w-50 my-3"><br>
+    <input type="text" class="w-50">
+  </div>
+  <div class="text-center mt-3">
+    <p><input type="checkbox"><span>En cochant cette case, j'accepte de recevoir des informations par mail</span></p> 
+    <p><a href="#" class="btn btn-warning btn-lg">Envoyer</a></p>
+  </div>
+  <p class="text-justify w-75 m-auto">Votre adresse de messagerie est uniquement utilisée pour vous envoyer les lettres d'information de Neo Travail. Vous pouvez à tout moment utiliser le lien de désabonnement intégré dans la newsletter.</p>
+
+  <hr class="my-5">
 </div>
