add color and underline on the header of each part

--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -26,7 +26,17 @@
   }
 }
 
+.about-oririn-container {
+  h1 {
+    text-decoration: underline;
+  }
+}
+
 .about-podcast-container {
   background-color: #FAF7CE;
   padding: 2em;
+
+  h1 {
+    text-decoration: underline;
+  }
 }
