--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <h1 class="text-center">Qui sommes-nous?</h1>
+  <h1 class="text-center header_color">Qui sommes-nous?</h1>
 
   <div class="profils-container">
     <div class="profil-container">
@@ -17,8 +17,8 @@
 
   <hr class="mt-5">
 
-  <div>
-    <h1 class="text-center my-5">Les origines</h1>
+  <div class="about-oririn-container">
+    <h1 class="text-center my-5 header_color">Les origines</h1>
     <p>Même Pas Peur, c’est d’abord un collectif informel né en 2017 qui se donne pour mission d’inspirer et d’outiller les personnes en quête de sens, à la recherche d’un équilibre vie pro / vie perso, et notamment l’adéquation entre ses valeurs et son activité professionnelle. De nombreux évènements et ateliers ont été organisés via Meetup, avec une communauté réunissant plus de 2 000 personnes !
     </p>
     <p>L’équipe du collectif s’est depuis agrandie et s’est structuré en  association fin 2019.  Plus on est de fous, plus on rit, et plus on est créatifs aussi ! Même Pas Peur propose un espace d’espace, mais est aussi un laboratoire d’expérimentation pour qui veut tester des initiatives et des projets : évènements en ligne, ateliers de créativité, d’écriture digitale, réflexion sur un nouveau média, etc.</p>
@@ -31,7 +31,7 @@
     <img src="https://via.placeholder.com/250" alt="photo-4">
   </div>
   <div class="about-podcast-container mt-5">
-    <h1 class="text-center mb-4">Le Podcast</h1>
+    <h1 class="text-center mb-4 header_color">Le Podcast</h1>
     <p>Lors des événements organisés par Même Pas Peur sur Lyon, nous avons rencontré ces trois dernières années des dizaines de personnes qui cassent les codes et réinventent leur métier.
     </p>
 
