--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,9 +1,17 @@
-<div class="text-contact-page-container">
-  <p>Tu exerces un "nouveau métier", une nouvelle façon de collaborer tournée vers un monde plus juste, plus durable et plus inclusif ?
-  Tu veux recommander une personne à interviewer ou un sujet à explorer ?</p>
-  <br>
-  <p>Ecris-nous à contact@neotravail.fr ou remplis le formulaire ci-dessous :)</p>
-</div>
-<div class="contact-form-container">
+<div class="container text-center">
+  <div>
+    <p>Tu exerces un "nouveau métier", une nouvelle façon de collaborer tournée vers un monde plus juste, plus durable et plus inclusif ?
+    <br> Tu veux recommander une personne à interviewer ou un sujet à explorer ?</p>
+    <p>Ecris-nous à contact@neotravail.fr ou remplis le formulaire ci-dessous :)</p>
+  </div>
 
+  <div class="color mt-5">
+    <div class="contact_form">
+      <h1 class="mb-4 header_color">Contact</h1>
+      <input type="text" placeholder="Nom">
+      <input type="text" placeholder="Email">
+      <textarea placeholder="Message" rows="7"></textarea>
+      <button type="submit">Envoyer</button>
+    </div>
+  </div>
 </div>
