--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -31,6 +31,12 @@ hr {
   padding: 5%;
 }
 
+.plateform-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .card-podcast {
   margin: 0 auto;
   width: 60%;
