--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,15 +1,6 @@
 .footer-container {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   font-size: 16px;
-  padding: 0 15em;
-}
-
-.mentions-legales {
-  padding-right: 4em;
-}
-
-.social-media {
-  padding-right: 7em;
+  align-items: center;
 }
