--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,15 +1,7 @@
 <hr>
 
 <div class="footer-container">
-  <div class="copyright">
-    <p>© 2021 Copyright Néotravail</p>
-  </div>
-
-  <div class="mentions-legales">
+    <p class="ml-4">© 2021 Copyright Néotravail</p>
     <p><a href="" style="color:black">Mentions Légales</a></p>
-  </div>
-
-  <div class="social-media">
-    <p class="color-link"><a href=""><i class="fab fa-linkedin fa-2x" style="color:black"></i></a></p>
-  </div>
+    <p class="color-link mr-4"><a href=""><i class="fab fa-linkedin fa-2x" style="color:black"></i></a></p>
 </div>
