basic design mention légales

--- a/app/views/pages/mentions_legales.html.erb
+++ b/app/views/pages/mentions_legales.html.erb
@@ -1,13 +1,18 @@
-<h1>Mentions légales</h1>
+<div class="container">
+  <h1 class="text-center header_color">Mentions légales</h1>
 
-<hr>
+  <hr class="mb-5">
 
-<p>Le site Néotravail est édité par l'Association Même Pas Peur</p>
+  <h3>Le site Néotravail est édité par l'Association Même Pas Peur</h3>
+  <h5 class="mb-5"><i class="fas fa-map-marker-alt mr-2 header_color"></i><a href="https://www.google.fr/maps/place/110+Cours+Gambetta,+69007+Lyon/@45.7511589,4.8522222,17z/data=!3m1!4b1!4m5!3m4!1s0x47f4ea6ed58e4f25:0xfce545e6247578c7!8m2!3d45.7511589!4d4.8544109" target="_blank">110 cours Gambetta 69007 -  Lyon</a></h5>
 
-<p>110 cours Gambetta 69007 Lyon</p>
+  <h3>Hébergement du site</h3>
+  <h5 class="mb-5"><a href="#">-adresse hébergeur-</a></h5>
 
-<p>Hébergement du site</p>
-<p>-adresse hébergeur-</p>
+  <h3>Site développé par:</h3>
+  <h5><a href="https://www.linkedin.com/in/jerem-b-0ab6921b2/" target="_blank">Jérémy Beaussart</a></h5>
+  <h5><a href="https://www.linkedin.com/in/quentin-bonnafet/" target="_blank">Quentin Bonnafet</a></h5>
+  <h5><a href="https://www.linkedin.com/in/thomas-pozzobon/" target="_blank">Thomas Pozzobon</a></h5>
+  <h5><a href="#" target="_blank">Simon Boutin</a></h5>
+</div>
 
-<p>Site développé par les 4 MousqueDév</p>
-<p>Jérémy Beaussart<br>Quentin Bonnafet<br>Simon Boutin<br>Thomas Pozzobon</p>
