connect mentions légales to the footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,6 +2,7 @@
 
 <div class="footer-container">
     <p class="ml-4">© 2021 Copyright Néotravail</p>
-    <p><a href="" style="color:black">Mentions Légales</a></p>
+    <p><%= link_to "Mentions Légales", mentions_legales_path %></p>
+    
     <p class="color-link mr-4"><a href=""><i class="fab fa-linkedin fa-2x" style="color:black"></i></a></p>
 </div>
