--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,13 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+body {
+  padding-top: 80px;
+}
+
+@media (max-width: 575.98px) { 
+  body {
+    padding-top: 48px;
+  }
+}
