--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -23,3 +23,6 @@ $border-radius-lg: 2px;
 $border-radius-sm: 2px;
 
 // Override other variables below!
+$navbar-light-color:                $neogreen;
+$navbar-light-hover-color:          $neogreen;
+$navbar-light-active-color:         $neogreen;
