--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <%= render 'shared/navbar' %>
-    <div class="container my-5">
+    <div class="my-5">
       <%= yield %>
     </div>
     <%= render 'shared/flashes' %>
