--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,48 @@
-// Specific CSS for your home-page
+.plateform-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem 0;
+  .logo-platform {
+    width: 50px;
+  }
+}
+
+.streaming-episodes-container {
+  background-color: #FAF7CE;
+  padding: 4rem 0;
+}
+
+.card-podcast {
+  margin: 0 auto 2rem auto;
+  width: 60%;
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.newsletter-container {
+  margin: 4rem 0;
+}
+
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px) { 
+  .card-podcast {
+    width: 90%;
+  }
+}
+
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) and (max-width: 767.98px) { 
+  .card-podcast {
+    width: 80%;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .card-podcast {
+    width: 70%;
+  }
+}
