--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -1,42 +1,46 @@
-.profils-container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
 .profil-container {
-  position: relative;
-  margin-top: 6vh;
-  width: 25vw;
-  height: 45vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
-  margin-right: 20px;
-
   p {
+    margin-top: 1rem;
     text-align: justify;
   }
-
   h5 {
-    position: absolute;
-    bottom: -5px;
-    right: 0;
-  }
-}
-
-.about-oririn-container {
-  h1 {
-    text-decoration: underline;
+    align-self: flex-end;
   }
 }
 
 .about-podcast-container {
   background-color: #FAF7CE;
-  padding: 2em;
+  padding: 4rem 0;
+}
 
-  h1 {
-    text-decoration: underline;
+.about-photos-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 240px;
+  overflow: hidden;
+  .photo {
+    border: none;
+    margin: 0;
+    padding: 0;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+      &:last-child {
+        object-position: top;
+      }
+    }
+  }
+}
+
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 768px) { 
+  .about-photos-container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 160px;
   }
 }
