--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,31 +1,17 @@
 <div class="container text-center">
-  <div>
-    <p>Tu exerces un "nouveau métier", une nouvelle façon de collaborer tournée vers un <br> monde plus juste, plus durable et plus inclusif ?
-    <br> Tu veux recommander une personne à interviewer ou un sujet à explorer ?</p>
-    <p>Ecris-nous à <a href="mailto: contact@neotravail.fr">contact@neotravail.fr</a> ou remplis le formulaire ci-dessous :)</p>
-  </div>
-
-  <div class="color mt-5">
-    <div class="contact_form">
-      <h1 class="mb-4 header_color">Contact</h1>
-      <input type="text" placeholder="Nom">
-      <input type="text" placeholder="Email">
-      <textarea placeholder="Message" rows="7"></textarea>
-      <button type="submit">Envoyer</button>
-    </div>
-  </div>
-
-  <hr class="my-5">
-
-  <div class="newsletter-container text-center">
-    <h1>Newsletter</h1>
-    <p>Pour découvrir de nouveaux métier ou en savoir plus sur le futur du travail,<br> inscrit toi à la newsletter !</p>
-    <input type="text" class="w-50 my-3"><br>
-    <input type="text" class="w-50">
-  </div>
-  <div class="text-center mt-3">
-    <p><input type="checkbox"><span>En cochant cette case, j'accepte de recevoir des informations par mail</span></p> 
-    <p><a href="#" class="btn btn-warning btn-lg">Envoyer</a></p>
-  </div>
-  <p class="text-justify w-75 m-auto">Votre adresse de messagerie est uniquement utilisée pour vous envoyer les lettres d'information de Neo Travail. Vous pouvez à tout moment utiliser le lien de désabonnement intégré dans la newsletter.</p>
+  <p>Tu exerces un "nouveau métier", une nouvelle façon de collaborer tournée vers un <br> monde plus juste, plus durable et plus inclusif ?
+  <br> Tu veux recommander une personne à interviewer ou un sujet à explorer ?</p>
+  <p>Ecris-nous à <a href="mailto: contact@neotravail.fr">contact@neotravail.fr</a> ou remplis le formulaire ci-dessous :)</p>
 </div>
+
+<div class="color mt-5">
+  <div class="contact_form">
+    <h2>Contact</h2>
+    <input type="text" placeholder="Nom">
+    <input type="text" placeholder="Email">
+    <textarea placeholder="Message" rows="7"></textarea>
+    <button type="submit">Envoyer</button>
+  </div>
+</div>
+
+<%= render 'shared/newsletter' %>
