--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -4,13 +4,14 @@
   <p>Ecris-nous à <a href="mailto: contact@neotravail.fr">contact@neotravail.fr</a> ou remplis le formulaire ci-dessous :)</p>
 </div>
 
-<div class="color mt-5">
-  <div class="contact_form">
-    <h2>Contact</h2>
-    <input type="text" placeholder="Nom">
-    <input type="text" placeholder="Email">
-    <textarea placeholder="Message" rows="7"></textarea>
-    <button type="submit">Envoyer</button>
+  <div class="color mt-5">
+    <div class="contact_form">
+      <h1 class="mb-4 header_color">Contact</h1>
+      <input name="name"  type="text" placeholder="Nom">
+      <input name="email" type="text" placeholder="Email">
+      <textarea name="message" placeholder="Message" rows="7"></textarea>
+      <button type="submit">Envoyer</button>
+    </div>
   </div>
 </div>
 
