--- a/app/views/pages/page_contact.html.erb
+++ b/app/views/pages/page_contact.html.erb
@@ -6,11 +6,13 @@
 
   <div class="color mt-5">
     <div class="contact_form">
+    <form action="/send_contact" method="post">
       <h1 class="mb-4 header_color">Contact</h1>
       <input name="name"  type="text" placeholder="Nom">
       <input name="email" type="text" placeholder="Email">
       <textarea name="message" placeholder="Message" rows="7"></textarea>
       <button type="submit">Envoyer</button>
+    </form>
     </div>
   </div>
 </div>
