add name to user

--- a/app/views/pages/page_contact.html.erb
+++ b/app/views/pages/page_contact.html.erb
@@ -5,7 +5,13 @@
 </div>
 
   <div class="color mt-5">
-    <div class="contact_form">
+    <%= simple_form_for [@message] do |f| %>
+        <%# <%= f.input :name, placeholder: 'Votre nom' %> %>
+        <%# <%= f.input :email, placeholder: 'Votre adresse email' %> %>
+        <%= f.input :message, placeholder: 'Message' %>
+        <%= f.submit "Envoyer", class: "btn btn-primary" %>
+    <% end %>
+    <%# <div class="contact_form">
     <form action="/send_contact" method="post">
       <h1 class="mb-4 header_color">Contact</h1>
       <input name="name"  type="text" placeholder="Nom">
@@ -13,7 +19,7 @@
       <textarea name="message" placeholder="Message" rows="7"></textarea>
       <button type="submit">Envoyer</button>
     </form>
-    </div>
+    </div> %>
   </div>
 </div>
 
