--- a/app/views/pages/page_contact.html.erb
+++ b/app/views/pages/page_contact.html.erb
@@ -5,7 +5,7 @@
 </div>
 
   <div class="color mt-5">
-    <%= simple_form_for [@message] do |f| %>
+    <%= simple_form_for [@user] do |f| %>
         <%# <%= f.input :name, placeholder: 'Votre nom' %> %>
         <%# <%= f.input :email, placeholder: 'Votre adresse email' %> %>
         <%= f.input :message, placeholder: 'Message' %>
